--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@cornerstonejs/core": "^2.19.16",
     "@cornerstonejs/dicom-image-loader": "^2.19.16",
-    "@cornerstonejs/tools": "^2.19.16"
+    "@cornerstonejs/tools": "^2.19.16",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
+    "dayjs": "^1.11.13"
   }
 }
